--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,5 @@
 .Ruserdata
 .RDataTmp
 R_scripts/0*
-Data_files/SPOTS-5m_ASV_10k-100k.csv
-Data_files/SPOTS-5m_ASV_5k-100k.csv
+Data_files/Australia
 output
